--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.23.0",
     "eslint": "^7.11.0",
     "gh-pages": "^3.2.3",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
